maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:42: error: not found: value estDevantMur
  if(estDevantMur()){
     ^